--- a/Pokedex/a propos.html
+++ b/Pokedex/a propos.html
@@ -24,8 +24,8 @@
     </header>
     <main >
         <section >
-            <h1 class=".presentation-text">Ma Présentation</h1>
-            <h3>Je m'appelle Judicaël et je suis un grand fan de Pokémon depuis l'âge de 8 ans ! Depuis mes premiers pas dans l'univers de cette licence extraordinaire, ma passion pour ces adorables créatures n'a jamais faibli.
+            <h1 class="welcome-title" >Ma Présentation</h1>
+            <h3 class="presentation-text">Je m'appelle Judicaël et je suis un grand fan de Pokémon depuis l'âge de 8 ans ! Depuis mes premiers pas dans l'univers de cette licence extraordinaire, ma passion pour ces adorables créatures n'a jamais faibli.
 <br>
                <p>Depuis le début de l'aventure Pokémon, j'ai suivi chaque nouvelle génération de jeux, de films et de séries avec un enthousiasme débordant. Chaque nouvelle région explorée, chaque nouveau Pokémon découvert, c'était toujours un moment magique pour moi.</p> 
                 <br>
